2008-10-12  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodbinding.vala:

	Fix code generation for virtual methods returning arrays

2008-10-11  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Add support for copying arrays, fixes bug 477107

2008-10-11  Jürg Billeter  <j@bitron.ch>

	* vapi/atk.vapi:
	* vapi/gdk-2.0.vapi:
	* vapi/gdk-pixbuf-2.0.vapi:
	* vapi/gio-2.0.vapi:
	* vapi/gio-unix-2.0.vapi:
	* vapi/gstreamer-0.10.vapi:
	* vapi/gstreamer-audio-0.10.vapi:
	* vapi/gstreamer-base-0.10.vapi:
	* vapi/gstreamer-controller-0.10.vapi:
	* vapi/gstreamer-dataprotocol-0.10.vapi:
	* vapi/gstreamer-fft-0.10.vapi:
	* vapi/gstreamer-net-0.10.vapi:
	* vapi/gstreamer-netbuffer-0.10.vapi:
	* vapi/gstreamer-pbutils-0.10.vapi:
	* vapi/gstreamer-riff-0.10.vapi:
	* vapi/gstreamer-rtp-0.10.vapi:
	* vapi/gstreamer-sdp-0.10.vapi:
	* vapi/gtk+-2.0.vapi:
	* vapi/pango.vapi:

	Regenerated

2008-10-11  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:
	* vala/valamethod.vala:
	* gobject/valaccodemethodbinding.vala:
	* vapigen/valagidlparser.vala:

	Always chain up to base constructor when possible,
	add has_construct_function attribute

2008-10-11  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:
	* vala/valacreationmethod.vala:
	* vala/valainterfacewriter.vala:
	* vala/valaobjecttype.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valastruct.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:
	* gobject/valaccodemethodbinding.vala:
	* gobject/valagidlwriter.vala:

	Support chaining constructors using `base' and `this'

2008-10-11  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala:
	* vapi/cairo.vapi:

	Avoid conflicts between named constructors and other members

2008-10-11  Jürg Billeter  <j@bitron.ch>

	* vala/valacreationmethod.vala:
	* vala/valamethod.vala:
	* gobject/valaccodedynamicmethodbinding.vala:
	* gobject/valaccodemethodbinding.vala:

	Generate code for construct functions in preparation to support